# washipad

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING
src/: CMakeLists.txt  ColorButton.qml  Main.qml  Page.qml  PageMarker.qml  PaintingCanvas.qml  Sketch.qml  ToolBar.qml  ToolButton.qml  event.cpp  event.h  main.cpp  main.qml  main.qrc  org.kde.washipad.appdata.xml  org.kde.washipad.desktop  pressureequation.cpp  pressureequation.h  sketchmodel.cpp  sketchmodel.h  sketchserializer.cpp  sketchserializer.h  sketchview.cpp  sketchview.h  stroke.cpp  stroke.h  strokeitem.cpp  strokeitem.h  strokelistitem.cpp  strokelistitem.h  strokepainter.cpp  strokepainter.h  tabletevent.cpp  tabletevent.h
src/icons/: CMakeLists.txt
tests/: CMakeLists.txt  sketchmodeltest.cpp  stroketest.cpp
